--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ button{
     border-radius: 4px;
     cursor: pointer; 
 }
+button:hover{
+    background-color: #651f71;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 .container{
     background-color: #ffebcd;
     padding: 40px;
@@ -48,7 +52,7 @@ border-width: medium;
 border-style: solid;
 border-radius: 50%;
 }
-.red light{
+.red-light{
 background-color: #ff0000;
 }
 .yellow-light{
